add endpoint for get products with error in excel format, and refactoring store and excel-service
