# docs/swagger.json
@@ -1,4 +1,7 @@
 {
+    "schemes": [
+        "http"
+    ],
     "swagger": "2.0",
     "info": {
         "title": "Tec-Doc API",
@@ -8,7 +11,7 @@
     "host": "localhost:8002",
     "basePath": "/",
     "paths": {
-        "/articles/enrichment": {
+        "/api/v1/articles/enrichment": {
             "post": {
                 "description": "to enrichment product by brand and article",
                 "consumes": [
@@ -80,11 +83,11 @@
                 }
             }
         },
-        "/excel": {
+        "/api/v1/excel": {
             "get": {
                 "description": "download excel table template",
                 "produces": [
-                    "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
+                    "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet.main+xml"
                 ],
                 "tags": [
                     "excel"
@@ -180,7 +183,7 @@
                 }
             }
         },
-        "/excel/enrichment": {
+        "/api/v1/excel/enrichment": {
             "post": {
                 "description": "Enrichment excel file, limit entiies in file = 10000",
                 "produces": [
@@ -232,7 +235,62 @@
                 }
             }
         },
-        "/product_history": {
+        "/api/v1/excel/products/errors": {
+            "post": {
+                "description": "download excel table template",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "excel"
+                ],
+                "summary": "ExcelProductsWithErrors",
+                "operationId": "excel_products_with_errors",
+                "parameters": [
+                    {
+                        "description": "The input body.\u003cbr /\u003e UploadID is ID of previously uploaded task.",
+                        "name": "InputBody",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.UploadIdRequest"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "description": "ID of user",
+                        "name": "X-User-Id",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "ID of supplier",
+                        "name": "X-Supplier-Id",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "integer"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/errinfo.errInf"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/product_history": {
             "post": {
                 "description": "get product list",
                 "consumes": [
@@ -304,7 +362,7 @@
                 }
             }
         },
-        "/task_history": {
+        "/api/v1/task_history": {
             "get": {
                 "description": "get task list",
                 "produces": [
