# internal/tec-doc/web/externalserver/server.go
@@ -20,6 +20,7 @@ type Service interface {
 	LoadFromExcel(bodyData io.Reader) (products []model.Product, err error)
 	GetSupplierTaskHistory(ctx context.Context, supplierID int64, limit int, offset int) ([]model.Task, error)
 	GetProductsHistory(ctx context.Context, uploadID int64, limit int, offset int) ([]model.Product, error)
+	ExcelProductsHistoryWithStatus(ctx context.Context, uploadID, status int64) ([]byte, error)
 	GetArticles(dataSupplierID int, article string) ([]model.Article, error)
 	GetBrand(brandName string) (*model.Brand, error)
 	Enrichment(product []model.Product) (productsEnriched []model.ProductEnriched, err error)
@@ -58,7 +59,8 @@ func (e *externalHttpServer) configureRouter() {
 		//api.Use(e.Authorize)
 		api.GET("/excel", e.ExcelTemplate)
 		api.POST("/excel", e.LoadFromExcel)
-		api.POST("/excel/enrichment", e.GetProductsEnrichedExcel)
+		api.POST("/excel/products/enrichment", e.GetProductsEnrichedExcel)
+		api.POST("/excel/products/errors", e.ExcelProductsWithErrors)
 		api.GET("/task_history", e.GetSupplierTaskHistory)
 		api.POST("/product_history", e.GetProductsHistory)
 		api.POST("/articles/enrichment", e.GetTecDocArticles)
